manifests/base/demo-app/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web-app
  labels:
    app: demo-web-app
    tier: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: demo-web-app
    tier: frontend
